assets/css/style.css
/* ... */
#authority {
    text-align: center;
}

#authority > * {
    display: block;
    margin: 0 0 1em;
    color: #666;
}

#authority dl {
    display: inline-grid;
    grid-template-columns: minmax(7rem, min-content) minmax(10rem, min-content);
    row-gap: .5em;
}

#authority dl > dt {
    text-align: left;
}

#authority dl > dd {
    margin: 0;
    text-align: right;
}

dfn[title],abbr[title] {
    cursor: help;
}

blockquote {
    margin: 0;
}

figure, details {
    margin: 0;
}

figure.quote, details.quote {
    margin: 1em 0;
    box-shadow: var(--shadow-dimensions) var(--theme-secondary-shadow);
    border-radius: .5em;
}

.quote.review {
    border-top: .5em solid var(--theme-secondary);
}

.review p:first-child {
    margin-top: -.5em;
}

.quote.review summary {
    cursor: pointer;
    line-height: 1.6em;
    margin: .7em 1em 1em;
}

.quote.review summary:after {
    display: inline;
    content: '\2026';
}
.quote.review[open] summary:after {
    display: inline;
    content: ':';
}

.quote figcaption, .quote.review summary {
    font-style: italic;
    color: var(--theme-primary);
    font-weight: bolder;
}

.quote figcaption {
    margin: 1.2em 1em 0 1em;
    float: left;
    display: block;
}

blockquote p {
    padding: 1em;
}

blockquote p:not(:last-child) {
    padding-bottom: 0;
}

blockquote p::before {
    content: '\2018';
}

blockquote p::after {
    content: '\2019';
}

p a {
    word-break: keep-all;
    white-space: nowrap;
}

figure.quote + p, details.quote + p {
    margin-top: 2em;
}

.grid {
    display: grid;
    column-gap: 1em;
}

.grid-cols-1 {
    grid-template-columns: repeat(1, 1fr);
}

.grid-cols-2 {
    grid-template-columns: repeat(2, 1fr);
}

.grid-cols-3 {
    grid-template-columns: repeat(3, 1fr);
}

.diplomas {
    column-gap: 2em;
    margin-bottom: 2em;
}

.diploma figure {
    text-align: center;
}

.diploma figure img {
    max-width: 100%;
    height: auto;
}

.diploma {
    display: grid;
    grid-template-rows: 1fr 10em;
    box-shadow: inset 0 -1em 0 0 var(--theme-secondary);
    padding-bottom: 2em;
}

table tr>* {
    line-height: 1.6em;
}

table.products tr>* {
    text-align: right;
    width: 200px;
}

table.products tr>*:first-child {
    text-align: left;
    width: 500px;
}

table.products tfoot td {
    padding-top: 1em;
    font-style: italic;
}

/* Mobile */
@media screen and (max-width: 800px) {
    .grid-cols-2 {
        grid-template-columns: repeat(1, 1fr);
    }

    .grid-cols-3 {
        grid-template-columns: repeat(1, 1fr);
    }

    .diploma {
        grid-template-rows: auto;
    }

    .diploma p {
        text-align: center;
    }

    picture.hero img, picture.map img {
        width: 100%;
        height: auto;
    }

    .hidden-sm {
        display: none;
    }

    header a:not([itemprop="brand"]) {
        font-size: 2rem;
    }

    /* Close menu */
    #nav a[href$="#"] {
        display: block;
        text-align: right;
        background: inherit;
        color: inherit;
        line-height: 1.5em;
    }

    a[href$="#"]:hover {
        background: inherit;
        text-decoration: underline;
        color: inherit;
    }

    a[href$="#"]:after {
        font-size: 1.4em;
        display: inline-block;
        content: "";
        mask-image: var(--icon-close);
        -webkit-mask-image: var(--icon-close);
    }

    /* Menu */
    header a[href$="#nav"] {
        display: block;
        float: right;
        margin: .6em 0 0 .3em;
        height: auto !important;
    }

    a[href$="#nav"]:before {
        display: block;
        content: "";
        transform: translateY(.1em);
        mask-image: var(--icon-menu);
        -webkit-mask-image: var(--icon-menu);
    }

    header, main, footer {
        padding: 0 1em;
    }

    header a[href^='tel:'] {
        color: inherit !important;
    }

    header a[href^='tel:']:before {
        font-size: 1em;
    }

    #nav {
        display: none;
        background: #fff;
        font-size: 1.6em;
        position: fixed;
        width: 100%;
        height: 100vh;
        top: 0;
        left: 0;
        z-index: 1000;
    }

    #nav:target {
        display: block;
    }

    #doormat nav, .footer-doormat p {
        display: block;
        font-size: 1.4em;
        line-height: 1.6em;
    }

    #doormat nav div {
        margin-bottom: 1em;
    }

    #doormat nav div a {
        border-bottom: 1px solid #ccc;
    }

    #doormat > *:last-child {
        text-align: center;
    }

    #nav-contextual {
        padding-left: 1em;
        padding-right: 1em;
    }

    .footer-doormat footer > div:last-child > :not(div) {
        text-align: center;
    }
}
/* ... */

